fix(dialog): z-index for dialog docs
- added `.spectrum-CSSExample-modal` to mimic `.spectrum-Modal-wrapper`
with z-index that should position it above `.spectrum-Underlay`
- adds/removes classes in dialog.yml to better implement the open/close
behaviors. The hero, no divider, and dismissible dialogs are now closed
on page load.

--- a/components/site/component.css
+++ b/components/site/component.css
@@ -245,6 +245,11 @@ governing permissions and limitations under the License.
 	transition: none;
 }
 
+/* Mimics the .spectrum-Modal-wrapper so the modals & dialogs are above the underlay */
+.spectrum-CSSExample-modal {
+	z-index: 2 !important;
+}
+
 .spectrum-Examples,
 .spectrum-Examples-itemGroup {
 	display: flex;
